--- a/templates/views/post.html
+++ b/templates/views/post.html
@@ -18,6 +18,16 @@
                 data-target="#exampleModalLong">Update</button>
             {% endif %}
             <p>views {{current_post.view_count}}</p>
+            <p>likes {{current_post.my_likes | length }}</p>
+            {% if current_user.like_post %}
+            <form method="POST" action={{url_for('like_post', id=current_post.id)}}>
+                <button type='submit'>Unlike</button>
+            </form>
+            {% else %}
+            <form method="POST" action={{url_for('like_post', id=current_post.id)}}>
+                <button type='submit'>Like</button>
+            </form>
+            {% endif %}
         </div>
     </div>
 </div>
